--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -79,14 +79,14 @@
                                     <li>@Html.ActionLink("Blog-detail", "BlogDetail", "Home", new { @class = "menu-link" })</li>
                                     <li>@Html.ActionLink("Product-detail", "ProductDetail", "Home", new { @class = "menu-link" })</li>
                                     <li>@Html.ActionLink("Cart", "Cart", "Home", new { @class = "menu-link" })</li>
-                                    <li>@Html.ActionLink("Wishlist", "Checkout", "", new { @class = "menu-link" })</li>
+                                    <li>@Html.ActionLink("Checkout", "Checkout", "", new { @class = "menu-link" })</li>
                                     <li>@Html.ActionLink("Wishlist", "Wishlist", "Home", new { @class = "menu-link" })</li>
                                     <li>
                                     
                                         @Html.ActionLink("Contact", "Contact", "Home", new { @class = "menu-link" })
                                         </li>
                                 </ul>
-                            </li>
+                            </li>   
                         </ul>
                         <ul class="navbar-nav m-0">
                             <li class="menu-item"><a href="/Home/Cart"><i class="fal fa-shopping-cart"></i></a></li>
