--- a/WebApplication/Views/Login/LogIn.cshtml
+++ b/WebApplication/Views/Login/LogIn.cshtml
@@ -216,7 +216,7 @@
                                 <a href="~/">
                                     <!-- Update the href to point to your home or specific page -->
                                 </a>
-                                <p class="text-muted mb-4 mt-3" style="font-size: 20px;">Enter your email address and password to access admin panel.</p>
+                                <p class="text-muted mb-4 mt-3" style="font-size: 20px;">Enter your email address and password</p>
                             </div>
 
                             @using (Html.BeginForm("LogIn", "Login", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -257,7 +257,7 @@
     <div class="row mt-3">
         <div class="col-12 text-center">
             <p> <a href="pages-recoverpw.html" class="text-muted ml-1">Forgot your password?</a></p>
-            <p class="text-muted">Don't have an account? <a href="pages-register.html" class="text-primary font-weight-medium ml-1">@Html.ActionLink("SignIn", "SignIn", "Home", new { @class = "text-primary font-weight-medium ml-1" })</a></p>
+            <p class="text-muted">Don't have an account? <a href="pages-register.html" class="text-primary font-weight-medium ml-1">@Html.ActionLink("Sign up", "SignIn", "Home", new { @class = "text-primary font-weight-medium ml-1" })</a></p>
         </div> <!-- end col -->
     </div>
     <!-- end row -->
