--- a/WebApplication/Views/Shared/ALayout.cshtml
+++ b/WebApplication/Views/Shared/ALayout.cshtml
@@ -66,13 +66,13 @@
                     </div>
                     <div class="right-nav">
                         <ul class="navbar-nav m-0">
-                             <li class="menu-item">
-                                    @Html.ActionLink("AccountUser", "UserAccount", "Users", new { area = "" }, new { @class = "menu-link" })
-                                </li>
-                                <li class="menu-item">
-                                    @Html.ActionLink("Logout", "LogOut", "Login", new { area = "" }, new { @class = "menu-link" })
-                                </li>
-                            
+                            <li class="menu-item">
+                                @Html.ActionLink("Admin", "AdminAccount", "Admin", new { area = "" }, new { @class = "menu-link" })
+                            </li>
+                            <li class="menu-item">
+                                @Html.ActionLink("Logout", "LogOut", "Login", new { area = "" }, new { @class = "menu-link" })
+                            </li>
+
 
 
 
