--- a/WebApplication/Views/Shared/ULayout.cshtml
+++ b/WebApplication/Views/Shared/ULayout.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using System.Web.Optimization
 
 <!DOCTYPE html>
 
@@ -18,12 +18,16 @@
           href="~/assets/media/favicon.png">
 
     <!-- All CSS files -->
-    <link rel="stylesheet" href="~/assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/font-awesome.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/slick.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/slick-theme.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/aksVideoPlayer.css">
+    @Styles.Render("~/bundles/bootstrap/assets/css")
+    @Styles.Render("~/bundles/font-awesome/assets/css")
+    @Styles.Render("~/bundles/slick/css")
+    @Styles.Render("~/bundles/slick-theme/css")
+    @Styles.Render("~/bundles/aksVideoPlayer/css")
     <link rel="stylesheet" href="~/assets/css/app.css">
+    @Styles.Render("~/bundles/app")  <!-- Бандл не работает, потому оставлю ссылку. Причину, почему конкретно он не работает, не нашла -->
+
+    @if (IsSectionDefined("Styles"))
+    {@RenderSection("Styles", required: false)}
 </head>
 <body>
 
@@ -66,13 +70,13 @@
                     </div>
                     <div class="right-nav">
                         <ul class="navbar-nav m-0">
-                             <li class="menu-item">
-                                    @Html.ActionLink("AccountUser", "UserAccount", "Users", new { area = "" }, new { @class = "menu-link" })
-                                </li>
-                                <li class="menu-item">
-                                    @Html.ActionLink("Logout", "LogOut", "Login", new { area = "" }, new { @class = "menu-link" })
-                                </li>
-                            
+                            <li class="menu-item">
+                                @Html.ActionLink("AccountUser", "UserAccount", "Users", new { area = "" }, new { @class = "menu-link" })
+                            </li>
+                            <li class="menu-item">
+                                @Html.ActionLink("Logout", "LogOut", "Login", new { area = "" }, new { @class = "menu-link" })
+                            </li>
+
 
 
 
@@ -262,7 +266,10 @@
     <script src="~/assets/js/vendor/jquery-validator.js"></script>
     <script src="~/assets/js/vendor/aksVideoPlayer.js"></script>
 
-    <!-- Site Scripts -->
-    <script src="~/assets/js/app.js"></script>
+    <!-- Jquery Js + Site Scripts in one bundle -->
+    @Scripts.Render("~/bundles/vendor/js")
+
+
+    @RenderSection("scripts", required: false)
 </body>
 </html>
