--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Web.Optimization
+    <!DOCTYPE html>
 
 <html>
 <head>
@@ -16,12 +17,16 @@
           href="~/assets/media/favicon.png">
 
     <!-- All CSS files -->
-    <link rel="stylesheet" href="~/assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/font-awesome.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/slick.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/slick-theme.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/aksVideoPlayer.css">
+    @Styles.Render("~/bundles/bootstrap/assets/css")
+    @Styles.Render("~/bundles/font-awesome/assets/css")
+    @Styles.Render("~/bundles/slick/css")
+    @Styles.Render("~/bundles/slick-theme/css")
+    @Styles.Render("~/bundles/aksVideoPlayer/css")
     <link rel="stylesheet" href="~/assets/css/app.css">
+    @Styles.Render("~/bundles/app")  <!-- Бандл не работает, потому оставлю ссылку. Причину, почему конкретно он не работает, не нашла -->
+
+    @if (IsSectionDefined("Styles"))
+    {@RenderSection("Styles", required: false)}
 </head>
 <body>
 
@@ -34,7 +39,7 @@
                         <a href="@Url.Action("Index", "Home")" class="navbar-brand m-0 p-0"><img alt src="~/assets/media/logo.png"></a>
                         <ul class="navbar-nav m-0">
                             <li class="has-children">
-                               
+
 
                             </li>
                             <li class="menu-item">
@@ -42,8 +47,8 @@
                                 @Html.ActionLink("Home", "Index", "Home", new { @class = "menu-link" })
                             </li>
 
-                            
-                          
+
+
 
 
                             <li class="menu-item">
@@ -59,16 +64,16 @@
                                    required>
                             <button class="search" type="submit">
                                 <i class="far fa-search search-icon"></i>
-                </button>
+                            </button>
                         </form>
-            </div>
+                    </div>
                     <div class="right-nav">
                         <ul class="navbar-nav m-0">
-                           
-                                <li class="menu-item">
-                                    @Html.ActionLink("Login", "LogIn", "Login", new { area = "" }, new { @class = "menu-link" })
-                                </li>
-                            
+
+                            <li class="menu-item">
+                                @Html.ActionLink("Login", "LogIn", "Login", new { area = "" }, new { @class = "menu-link" })
+                            </li>
+
 
 
 
@@ -106,8 +111,8 @@
                                     </svg>
                                 </a>
                             </li>
-                </ul>
-            </div>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </div>
@@ -123,8 +128,8 @@
                 </div>
                 <div class="hamburger-menu">
                     <div class="bar"></div>
-        </div>
-    </div>
+                </div>
+            </div>
             <nav class="mobile-navar d-xl-none">
                 <ul>
                     <li class="has-children">
@@ -246,19 +251,15 @@
             </div>
             <p class="color-white text-center">©2023 Cricket Pulse All Rights Reserved.</p>
         </div>
-        </footer>
+    </footer>
     <!-- Footer Area End  -->
     </div>
 
-    <!-- Jquery Js -->
-    <script src="~/assets/js/vendor/jquery-3.6.3.min.js"></script>
-    <script src="~/assets/js/vendor/bootstrap.min.js"></script>
-    <script src="~/assets/js/vendor/slick.min.js"></script>
-    <script src="~/assets/js/vendor/jquery-appear.js"></script>
-    <script src="~/assets/js/vendor/jquery-validator.js"></script>
-    <script src="~/assets/js/vendor/aksVideoPlayer.js"></script>
+    <!-- Footer Area End  -->
+    <!-- Jquery Js + Site Scripts in one bundle -->
+    @Scripts.Render("~/bundles/vendor/js")
 
-    <!-- Site Scripts -->
-    <script src="~/assets/js/app.js"></script>
+
+    @RenderSection("scripts", required: false)
 </body>
 </html>
