вьюшка для создания продукта

--- a/WebApplication/Views/Admin/ManageProducts.cshtml
+++ b/WebApplication/Views/Admin/ManageProducts.cshtml
@@ -95,9 +95,8 @@
             });
 
             $('#addProductBtn').on('click', function() {
-                // Add product button functionality
-                alert('Add Product button clicked');
-                // Here you can add code to show a modal or redirect to a product creation page
+                // Перенаправление на страницу CreateProduct.cshtml
+                window.location.href = 'CreateProduct'; // Предполагается, что страница CreateProduct.cshtml доступна по этому URL    // Here you can add code to show a modal or redirect to a product creation page
             });
         });
     </script>
