--- a/WebApplication/Views/ManageContent/AddArticle.cshtml
+++ b/WebApplication/Views/ManageContent/AddArticle.cshtml
@@ -7,26 +7,38 @@
 
 <h2>AddArticle</h2>
 
-<form asp-action="EditArticle" method="post">
+@using (Html.BeginForm("AddArticleAction", "ManageContent", FormMethod.Post))
+{
+
+    @*<form asp-action="AddArticle" method="post">*@
+
+    <div class="form-group">
+        <label for="articleTitle">Number</label>
+        <input type="text" class="form-control" id="articleNumber" name="ArticleNumber" @*value="@Model.ArticleNumber"*@ required>
+    </div>
+
     <div class="form-group">
         <label for="articleTitle">Title</label>
-        <input type="text" class="form-control" id="articleTitle" name="Title" value="@Model.ArticleName" required>
+        <input type="text" class="form-control" id="articleTitle" name="ArticleName" @*value="@Model.ArticleName"*@ required>
     </div>
 
     <div class="form-group">
         <label for="articleAuthor">Author</label>
-        <input type="text" class="form-control" id="articleAuthor" name="Author" value="@Model.AuthorName" required>
+        <input type="text" class="form-control" id="articleAuthor" name="AuthorName" @*value="@Model.AuthorName"*@ required>
     </div>
 
     <div class="form-group">
         <label for="articleCategory">Category</label>
-        <input type="text" class="form-control" id="articleCategory" name="Category" value="@Model.Category" required>
+        <input type="text" class="form-control" id="articleCategory" name="Category" @*value="@Model.Category"*@ required>
     </div>
 
     <div class="form-group">
         <label for="articleContent">Content</label>
-        <textarea class="form-control" id="articleContent" name="Content" rows="5" required>@Model.TextOfArticle</textarea>
+        <textarea class="form-control" id="articleContent" name="TextOfArticle" rows="5" required>@Model.TextOfArticle</textarea>
     </div>
 
     <button type="submit" class="btn btn-primary">Save changes</button>
-</form>
+
+
+    @*</form>*@
+}
