--- a/WebApplication/Views/ManageContent/ManageContent.cshtml
+++ b/WebApplication/Views/ManageContent/ManageContent.cshtml
@@ -43,9 +43,7 @@
                     var dataArticlesTable = Model.dataForTable(countArticles);
 
                     /*int number = 0;*/
-
-                    int kol = 0;
-
+                                        
                     foreach (var item in dataArticlesTable)
                     {
                         if (item != null)
@@ -61,11 +59,6 @@
                             </tr>
 
                         }
-                        else
-                        {
-                            kol++;
-                        }
-                        if (kol > 3) { break; }
                     }
 
                 }
@@ -73,26 +66,6 @@
             </tbody>
         </table>
 
-        @*@using (Html.BeginForm("AddArticle", "ManageContent", FormMethod.Post, new { id = "addArticleForm" }))
-        {
-            <div class="text-left">
-
-                <button type="submit" class="btn btn-danger btn-lg" id="addArticleBtn">Add Article</button>
-            </div>
-
-        }
-
-        @using (Html.BeginForm("EditArticle", "ManageContent", FormMethod.Post, new { id = "editArticleForm" }))
-        {
-            <input type="text" id="EditArticle" class="form-control" placeholder="Enter the number of article...">
-            <button type="submit" class="btn btn-primary btn-sm edit-btn">Edit</button>
-        }
-
-        @using (Html.BeginForm("DeleteArticle", "ManageContent", FormMethod.Post, new { id = "deleteArticleForm" }))
-        {
-            <input type="text" id="DeleteArticle" class="form-control" placeholder="Enter the number of article...">
-            <button type="submit" class="btn btn-danger btn-sm delete-btn">Delete</button>
-        }*@
 
         <div class="text-left mb-3">
             @using (Html.BeginForm("AddArticle", "ManageContent", FormMethod.Post, new { id = "addArticleForm" }))
@@ -105,7 +78,7 @@
             @using (Html.BeginForm("EditArticle", "ManageContent", FormMethod.Post, new { id = "editArticleForm" }))
             {
                 <div class="form-group">
-                    <input type="text" id="EditArticle" name="@Model.ArticleNumber" class="form-control mb-2" placeholder="Enter the number of article...">
+                    <input type="text" id="EditArticle" name="ArticleNumber" class="form-control mb-2" placeholder="Enter the number of article...">
                     <button type="submit" class="btn btn-primary btn-sm edit-btn">Edit</button>
                 </div>
             }
@@ -115,7 +88,7 @@
             @using (Html.BeginForm("DeleteArticle", "ManageContent", FormMethod.Post, new { id = "deleteArticleForm" }))
             {
                 <div class="form-group">
-                    <input type="text" id="DeleteArticle" name="@Model.ArticleNumber" class="form-control mb-2" placeholder="Enter the number of article...">
+                    <input type="text" id="DeleteArticle" name="ArticleNumber" class="form-control mb-2" placeholder="Enter the number of article...">
                     <button type="submit" class="btn btn-danger btn-sm delete-btn">Delete</button>
                 </div>
             }
@@ -136,43 +109,6 @@
                         $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
                     });
                 });
-
-                //$('.edit-btn').on('click', function() {
-                //    // Edit button functionality
-                //    var row = $(this).closest('tr');
-                //    var title = row.find('td:eq(1)').text();
-                //    var author = row.find('td:eq(2)').text();
-                //    var category = row.find('td:eq(3)').text();
-                //    var content = "Sample content for " + title; // Replace with actual content
-
-                //    $('#articleTitle').val(title);
-                //    $('#articleAuthor').val(author);
-                //    $('#articleCategory').val(category);
-                //    $('#articleContent').val(content);
-
-                //    $('#editArticleModal').modal('show');
-                //});
-
-                //$('#editArticleForm').on('submit', function(e) {
-                //    e.preventDefault();
-                //    // Save changes functionality
-                //    alert('Changes saved');
-                //    $('#editArticleModal').modal('hide');
-                //    // Here you can add an AJAX call to save changes in the database
-                //});
-
-                //$('.delete-btn').on('click', function() {
-                //    // Delete button functionality
-                //    if(confirm('Are you sure you want to delete this article?')) {
-                //        $(this).closest('tr').remove();
-                //    }
-                //});
-
-                //$('#addArticleBtn').on('click', function() {
-                //    // Add article button functionality
-                //    alert('Add Article button clicked');
-                //    // Here you can add code to show a modal or redirect to an article creation page
-                //});
             });
         </script>
 </body>
