--- a/WebApplication/Views/Admin/ManageProducts.cshtml
+++ b/WebApplication/Views/Admin/ManageProducts.cshtml
@@ -43,17 +43,17 @@
                     {
                         if (item != null)
                         {
-                            <tr>
-                                <td>@item.ProductNumber</td>
-                                <td>@item.ProductName</td>
-                                <td>@item.Category</td>
-                                <td>@item.Price</td>
-                                <input type="checkbox" class="active-checkbox" @(item.IsActive ? "checked" : "")>
-                                <td>
-                                    <button class="btn btn-primary btn-sm edit-btn">Edit</button>
-                                    <button class="btn btn-danger btn-sm delete-btn">Delete</button>
-                                </td>
-                            </tr>
+                                <tr>
+                                    <td>@item.ProductNumber</td>
+                                    <td>@item.ProductName</td>
+                                    <td>@item.Category</td>
+                                    <td>@item.Price</td>
+                                    <td><input type="checkbox" class="active-checkbox" @(item.IsActive ? "checked" : "")></td>
+                                    <td>
+                                        <button class="btn btn-primary btn-sm edit-btn">Edit</button>
+                                        <button class="btn btn-danger btn-sm delete-btn">Delete</button>
+                                    </td>
+                                </tr>
                         }
                         else
                         {
