--- a/WebApplication/Views/Admin/ManageReview.cshtml
+++ b/WebApplication/Views/Admin/ManageReview.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "ManageReview";
     Layout = "~/Views/Shared/LayoutAdmin.cshtml";
 }
+@model WebApplication.Models.ReviewModel
 
 <!DOCTYPE html>
 <html lang="en">
@@ -31,28 +32,30 @@
                 </tr>
             </thead>
             <tbody id="reviewTable">
-                <tr>
-                    <td>1</td>
-                    <td>User 1</td>
-                    <td>Product A</td>
-                    <td>This product is amazing!</td>
-                    <td>5</td>
-                    <td>
-                        <button class="btn btn-success btn-sm accept-btn">Accept</button>
-                        <button class="btn btn-warning btn-sm deny-btn">Deny</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>User 2</td>
-                    <td>Product B</td>
-                    <td>Not satisfied with the quality.</td>
-                    <td>2</td>
-                    <td>
-                        <button class="btn btn-success btn-sm accept-btn">Accept</button>
-                        <button class="btn btn-warning btn-sm deny-btn">Deny</button>
-                    </td>
-                </tr>
+                @{
+                    int countPendingReviews = 100;
+                    var pendingReviewTable = Model.dataForTable(countPendingReviews);
+                    int kol = 0;
+                    foreach (var item in pendingReviewTable)
+                    {
+                        if (item != null && !item.Approved)
+                        {
+                            <tr>
+
+                                <td>@item.ReviewNumber</td>
+                                <td>@item.UserID</td>
+                                <td>@item.ProductID</td>
+                                <td>@item.Text</td>
+                                <td>@item.Rating</td>
+                                <td>
+                                    <button class="btn btn-success btn-sm accept-btn">Accept</button>
+                                    <button class="btn btn-warning btn-sm deny-btn">Deny</button>
+                                </td>
+                            </tr>
+                        }
+                    }
+                }
+                
                 <!-- Add more reviews here -->
             </tbody>
         </table>
@@ -75,26 +78,29 @@
                 </tr>
             </thead>
             <tbody id="deleteReviewTable">
-                <tr>
-                    <td>3</td>
-                    <td>User 3</td>
-                    <td>Product C</td>
-                    <td>Decent product.</td>
-                    <td>3</td>
-                    <td>
-                        <button class="btn btn-danger btn-sm delete-btn">Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>User 4</td>
-                    <td>Product D</td>
-                    <td>Excellent value for money.</td>
-                    <td>4</td>
-                    <td>
-                        <button class="btn btn-danger btn-sm delete-btn">Delete</button>
-                    </td>
-                </tr>
+                @{
+                    int countApprovedReviews = 100;
+                    var approvedReviewTable = Model.dataForTable(countApprovedReviews);
+                    kol = 0;
+                    foreach (var item in approvedReviewTable)
+                    {
+                        if (item != null && item.Approved)
+                        {
+                            <tr>
+
+                                <td>@item.ReviewNumber</td>
+                                <td>@item.UserID</td>
+                                <td>@item.ProductID</td>
+                                <td>@item.Text</td>
+                                <td>@item.Rating</td>
+                                <td>
+                                    <button class="btn btn-success btn-sm accept-btn">Accept</button>
+                                    <button class="btn btn-warning btn-sm deny-btn">Deny</button>
+                                </td>
+                            </tr>
+                        }
+                    }
+                }
                 <!-- Add more reviews here -->
             </tbody>
         </table>
