--- a/WebApplication/Views/ManageContent/EditArticle.cshtml
+++ b/WebApplication/Views/ManageContent/EditArticle.cshtml
@@ -15,18 +15,19 @@
 
     <div class="form-group">
         <label for="articleTitle">Title</label>
-        <textarea class="form-control" id="articleTitle" name="ArticleName" required>@Model.ArticleName</textarea>
+       
+        <textarea class="form-control" id="ArticleName" name="ArticleName" required>@Model.ArticleName</textarea>
 
     </div>
 
     <div class="form-group">
         <label for="articleAuthor">Author</label>
-        <input type="text" class="form-control" id="articleAuthor" name="AuthorName" required>
+        <textarea class="form-control" id="articleAuthor" name="AuthorName" required>@Model.AuthorName</textarea>
     </div>
 
     <div class="form-group">
         <label for="articleCategory">Category</label>
-        <input type="text" class="form-control" id="articleCategory" name="Category" required>
+        <textarea class="form-control" id="Category" name="Category" required>@Model.Category</textarea>
     </div>
 
     <div class="form-group">
