--- a/WebApplication/Views/Shared/ALayout.cshtml
+++ b/WebApplication/Views/Shared/ALayout.cshtml
@@ -1,5 +1,4 @@
-﻿
-
+﻿@using System.Web.Optimization
 <!DOCTYPE html>
 
 <html>
@@ -18,12 +17,16 @@
           href="~/assets/media/favicon.png">
 
     <!-- All CSS files -->
-    <link rel="stylesheet" href="~/assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/font-awesome.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/slick.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/slick-theme.css">
-    <link rel="stylesheet" href="~/assets/css/vendor/aksVideoPlayer.css">
+    @Styles.Render("~/bundles/bootstrap/assets/css")
+    @Styles.Render("~/bundles/font-awesome/assets/css")
+    @Styles.Render("~/bundles/slick/css")
+    @Styles.Render("~/bundles/slick-theme/css")
+    @Styles.Render("~/bundles/aksVideoPlayer/css")
     <link rel="stylesheet" href="~/assets/css/app.css">
+    @Styles.Render("~/bundles/app")  <!-- Бандл не работает, потому оставлю ссылку. Причину, почему конкретно он не работает, не нашла -->
+
+    @if (IsSectionDefined("Styles"))
+    {@RenderSection("Styles", required: false)}
 </head>
 <body>
 
@@ -66,13 +69,13 @@
                     </div>
                     <div class="right-nav">
                         <ul class="navbar-nav m-0">
+
                             <li class="menu-item">
                                 @Html.ActionLink("Admin", "AdminAccount", "Admin", new { area = "" }, new { @class = "menu-link" })
                             </li>
                             <li class="menu-item">
                                 @Html.ActionLink("Logout", "LogOut", "Login", new { area = "" }, new { @class = "menu-link" })
                             </li>
-
 
 
 
@@ -254,15 +257,11 @@
     <!-- Footer Area End  -->
     </div>
 
-    <!-- Jquery Js -->
-    <script src="~/assets/js/vendor/jquery-3.6.3.min.js"></script>
-    <script src="~/assets/js/vendor/bootstrap.min.js"></script>
-    <script src="~/assets/js/vendor/slick.min.js"></script>
-    <script src="~/assets/js/vendor/jquery-appear.js"></script>
-    <script src="~/assets/js/vendor/jquery-validator.js"></script>
-    <script src="~/assets/js/vendor/aksVideoPlayer.js"></script>
+    <!-- Footer Area End  -->
+    <!-- Jquery Js + Site Scripts in one bundle -->
+    @Scripts.Render("~/bundles/vendor/js")
 
-    <!-- Site Scripts -->
-    <script src="~/assets/js/app.js"></script>
+
+    @RenderSection("scripts", required: false)
 </body>
 </html>
