add-pages-user/admin

--- a/WebApplication/Views/HomeAdmin/HomeAdmin2.cshtml
+++ b/WebApplication/Views/HomeAdmin/HomeAdmin2.cshtml
@@ -1,8 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "AdminAccountHome";
+    ViewBag.Title = "HomeAdmin2";
     Layout = "~/Views/Shared/ALayout.cshtml";
 }
+
+
 
 
 <!-- Hero Banner start -->
