--- a/WebApplication/Views/HomeUser/HomeUsers.cshtml
+++ b/WebApplication/Views/HomeUser/HomeUsers.cshtml
@@ -1,8 +1,11 @@
 ﻿
 @{
-    ViewBag.Title = "UAccountHome";
+    ViewBag.Title = "HomeUsers";
     Layout = "~/Views/Shared/ULayout.cshtml";
 }
+
+
+
 
 
 
@@ -1327,6 +1330,8 @@
         </div>
     </section>
     <!-- Blogs Area End -->
+
+
 
 
 
