--- a/WebApplication/Views/Shared/LayoutAdmin.cshtml
+++ b/WebApplication/Views/Shared/LayoutAdmin.cshtml
@@ -118,7 +118,7 @@
     <div class="main-content">
         <div class="navbar">
             <div class="nav-buttons">
-                @Html.ActionLink("Home", "AdminAccountHome", "Login", new { area = "" }, new { @class = "menu-link" })
+                @Html.ActionLink("Home", "HomeAdmin2", "HomeAdmin", new { area = "" }, new { @class = "menu-link" })
                 <div class="user-dropdown">
                     <img src="https://via.placeholder.com/40" alt="Admin" class="rounded-circle">
                     <div class="user-dropdown-content">
