--- a/WebApplication/Views/Shared/LayoutUsers.cshtml
+++ b/WebApplication/Views/Shared/LayoutUsers.cshtml
@@ -116,7 +116,7 @@
         <div class="navbar">
             <div class="nav-buttons">
                 
-                @Html.ActionLink("Home", "UAccountHome", "Login", new { area = "" }, new { @class = "menu-link" })
+                @Html.ActionLink("Home", "HomeUsers", "HomeUser", new { area = "" }, new { @class = "menu-link" })
                 <div class="user-dropdown">
                     <img src="https://via.placeholder.com/40" alt="User" class="rounded-circle">
                     <div class="user-dropdown-content">
