--- a/WebApplication/Views/Shared/ULayout.cshtml
+++ b/WebApplication/Views/Shared/ULayout.cshtml
@@ -37,7 +37,7 @@
             <nav class="navbar navbar-expand-lg p-0">
                 <div class="collapse navbar-collapse" id="mynavbar">
                     <div class="left-nav">
-                        <a href="@Url.Action("Index", "Home")" class="navbar-brand m-0 p-0"><img alt src="~/assets/media/logo.png"></a>
+                        <a href="@Url.Action("HomeUsers", "HomeUser")" class="navbar-brand m-0 p-0"><img alt src="~/assets/media/logo.png"></a>
                         <ul class="navbar-nav m-0">
                             <li class="has-children">
 
@@ -45,7 +45,7 @@
                             </li>
                             <li class="menu-item">
 
-                                @Html.ActionLink("Home", "Index", "Home", new { @class = "menu-link" })
+                                @Html.ActionLink("Home", "HomeUsers", "HomeUser", new { @class = "menu-link" })
                             </li>
 
 
@@ -54,7 +54,7 @@
 
                             <li class="menu-item">
 
-                                @Html.ActionLink("About us", "About", "Home", new { @class = "menu-link" })
+                                @Html.ActionLink("About us", "About", "HomeUser", new { @class = "menu-link" })
                             </li>
                         </ul>
                     </div>
@@ -81,29 +81,29 @@
 
 
                             <li class="has-children">
-                                @Html.ActionLink("Shop", "ShopListing", "Home", new { @class = "menu-link" })
+                                @Html.ActionLink("Shop", "ShopListing", "HomeUser", new { @class = "menu-link" })
 
                             </li>
                             <li class="has-children">
                                 <a href="javascript:void(0);">Pages</a>
                                 <ul class="submenu">
-                                    <li>@Html.ActionLink("Blog", "Blog", "Home", new { @class = "menu-link" })</li>
-                                    <li>@Html.ActionLink("Blog-detail", "BlogDetail", "Home", new { @class = "menu-link" })</li>
-                                    <li>@Html.ActionLink("Product-detail", "ProductDetail", "Home", new { @class = "menu-link" })</li>
-                                    <li>@Html.ActionLink("Cart", "Cart", "Home", new { @class = "menu-link" })</li>
-                                    <li>@Html.ActionLink("Checkout", "Checkout", "", new { @class = "menu-link" })</li>
-                                    <li>@Html.ActionLink("Wishlist", "Wishlist", "Home", new { @class = "menu-link" })</li>
+                                    <li>@Html.ActionLink("Blog", "Blog", "HomeUser", new { @class = "menu-link" })</li>
+                                    <li>@Html.ActionLink("Blog-detail", "BlogDetail", "HomeUser", new { @class = "menu-link" })</li>
+                                    <li>@Html.ActionLink("Product-detail", "ProductDetail", "HomeUser", new { @class = "menu-link" })</li>
+                                    @*<li>@Html.ActionLink("Cart", "Cart", "HomeUser", new { @class = "menu-link" })</li>*@
+                                    <li>@Html.ActionLink("Checkout", "Checkout", "HomeUser", new { @class = "menu-link" })</li>
+                                    @*<li>@Html.ActionLink("Wishlist", "Wishlist", "HomeUser", new { @class = "menu-link" })</li>*@
                                     <li>
 
-                                        @Html.ActionLink("Contact", "Contact", "Home", new { @class = "menu-link" })
+                                        @Html.ActionLink("Contact", "Contact", "HomeUser", new { @class = "menu-link" })
                                     </li>
                                 </ul>
                             </li>
                         </ul>
                         <ul class="navbar-nav m-0">
-                            <li class="menu-item"><a href="/Home/Cart"><i class="fal fa-shopping-cart"></i></a></li>
+                            <li class="menu-item"><a href="/HomeUser/Cart"><i class="fal fa-shopping-cart"></i></a></li>
                             <li class="menu-item">
-                                <a href="/Home/Wishlist">
+                                <a href="/HomeUser/Wishlist">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                                         <path d="M22.5934 30.0157C20.8265 28.717 19.2065 27.2294 17.7623 25.5794C16.8054 24.5356 16.0151 23.3504 15.4194 22.0657C15.0999 21.4343 14.9282 20.7384 14.9174 20.0309C14.9067 19.3234 15.057 18.6227 15.3572 17.9818C15.6753 17.3315 16.1488 16.7696 16.7358 16.3458C17.3228 15.922 18.0052 15.6494 18.7227 15.552C19.4401 15.4547 20.1705 15.5356 20.8493 15.7876C21.528 16.0397 22.1341 16.4551 22.6141 16.9971L22.7592 17.163C23.0194 16.9005 23.2927 16.6514 23.5782 16.4167C24.1809 15.9523 24.8941 15.6528 25.6477 15.5474C26.4013 15.4421 27.1693 15.5346 27.8762 15.8159C28.5832 16.0972 29.2048 16.5575 29.68 17.1517C30.1551 17.7459 30.4675 18.4535 30.5863 19.2049C30.6341 19.4402 30.655 19.6801 30.6485 19.9201C30.6365 20.2121 30.6054 20.5029 30.5552 20.7908C30.2532 22.023 29.6951 23.1778 28.9172 24.1801C27.2311 26.4 25.234 28.3653 22.9873 30.0157H22.5934ZM22.78 28.6475C24.2797 27.4603 25.6678 26.1384 26.9268 24.6984C27.755 23.8021 28.453 22.7937 29.0002 21.7029C29.39 20.9731 29.5319 20.1364 29.4045 19.3189C29.2827 18.6695 28.9618 18.0741 28.4862 17.6153C28.0106 17.1566 27.404 16.8572 26.7505 16.7587C26.0771 16.6498 25.3864 16.7654 24.7851 17.0875C24.1838 17.4097 23.705 17.9206 23.4227 18.5415C23.379 18.6677 23.2982 18.7777 23.1909 18.8573C23.0837 18.9368 22.9549 18.9821 22.8214 18.9872C22.5104 18.9872 22.3445 18.8007 22.2098 18.5312C21.966 18.004 21.5794 17.5557 21.0939 17.237C20.6083 16.9182 20.0432 16.7417 19.4625 16.7276C19.0006 16.7022 18.5387 16.7802 18.1107 16.9559C17.6827 17.1316 17.2993 17.4005 16.9884 17.7431C16.6776 18.0857 16.4471 18.4933 16.3137 18.9363C16.1804 19.3792 16.1476 19.8464 16.2177 20.3036C16.3314 20.9124 16.5303 21.5021 16.8086 22.0553C17.4155 23.1933 18.1798 24.2401 19.0789 25.1648C20.2118 26.4211 21.4424 27.5856 22.7592 28.6475H22.78Z" fill="#FAFAFA" />
                                         <path d="M22.106 2.21657L22.8939 6.20715L24.2313 12.8305C24.2707 12.9543 24.2751 13.0867 24.244 13.2129C24.2129 13.3391 24.1475 13.4543 24.055 13.5457C23.9736 13.626 23.8712 13.6818 23.7596 13.7068C23.648 13.7319 23.5316 13.7251 23.4236 13.6874C23.3156 13.6496 23.2204 13.5823 23.1488 13.4931C23.0771 13.4039 23.0319 13.2965 23.0183 13.1829C22.8006 12.1464 22.6036 11.1099 22.3963 10.0734C21.9125 7.62719 21.4218 5.18793 20.9242 2.75558C20.8516 2.3617 20.7065 2.24767 20.3125 2.21657H7.36415C6.65919 2.21657 6.55554 2.29951 6.42076 2.98361L2.87525 20.6665C2.75085 21.2781 2.98927 21.5579 3.62166 21.5579H11.6146C11.7354 21.5476 11.8567 21.5476 11.9775 21.5579C12.122 21.577 12.2547 21.648 12.3509 21.7576C12.447 21.8673 12.5 22.0081 12.5 22.1539C12.5 22.2997 12.447 22.4405 12.3509 22.5502C12.2547 22.6598 12.122 22.7308 11.9775 22.7499H3.55946C3.27678 22.7665 2.99416 22.7164 2.73446 22.6035C2.47476 22.4907 2.24529 22.3183 2.0646 22.1003C1.88392 21.8823 1.7571 21.6248 1.69441 21.3487C1.63173 21.0726 1.63493 20.7857 1.70378 20.511L4.87608 4.63166C5.02121 3.9372 5.15598 3.23237 5.29075 2.55864C5.36148 2.11485 5.59267 1.71245 5.94046 1.42777C6.28825 1.14309 6.72845 0.995952 7.17755 1.01425H25.1747C25.6183 0.995903 26.0533 1.14086 26.3972 1.42166C26.7411 1.70247 26.9701 2.09964 27.0407 2.53792C27.7353 5.98951 28.4195 9.45146 29.1141 12.903C29.1424 12.986 29.1529 13.074 29.1448 13.1613C29.1367 13.2485 29.1103 13.3331 29.0672 13.4094C29.0241 13.4858 28.9654 13.5521 28.8949 13.6042C28.8244 13.6563 28.7436 13.6928 28.658 13.7115C28.5739 13.7262 28.4876 13.7234 28.4046 13.7033C28.3216 13.6832 28.2437 13.6462 28.1756 13.5947C28.1075 13.5431 28.0508 13.4782 28.0089 13.4037C27.9671 13.3293 27.941 13.2471 27.9323 13.1622C27.528 11.1617 27.134 9.1716 26.7297 7.17113C26.4394 5.72001 26.1595 4.26888 25.8693 2.81777C25.7967 2.44462 25.6101 2.2477 25.2783 2.2477C24.2002 2.20624 23.1635 2.21657 22.106 2.21657Z" fill="#FAFAFA" />
