reviews, orders from  admin after manage content

--- a/WebApplication/Views/Shared/LayoutAdmin.cshtml
+++ b/WebApplication/Views/Shared/LayoutAdmin.cshtml
@@ -122,7 +122,7 @@
                 <div class="user-dropdown">
                     <img src="https://via.placeholder.com/40" alt="Admin" class="rounded-circle">
                     <div class="user-dropdown-content">
-                        @Html.ActionLink("Настройки профиля", "Settings", "Account", new { @class = "dropdown-item" })
+                        @Html.ActionLink("Account settings", "Settings", "Account", new { @class = "dropdown-item" })
                         @Html.ActionLink("Log out", "LogOut", "Login", new { area = "" }, new { @class = "menu-link" })
                     </div>
                 </div>
