edit articles, dinamic count of articles in view

--- a/WebApplication/Views/ManageContent/EditArticle.cshtml
+++ b/WebApplication/Views/ManageContent/EditArticle.cshtml
@@ -12,10 +12,11 @@
 {
 
     <input type="hidden" name="ArticleNumber" value="@Model.ArticleNumber">
+    <input type="hidden" name="ArticleId" value="@Model.ArticleId">
 
     <div class="form-group">
         <label for="articleTitle">Title</label>
-       
+
         <textarea class="form-control" id="ArticleName" name="ArticleName" required>@Model.ArticleName</textarea>
 
     </div>
