but<shop_now> , view_orders_view

--- a/WebApplication/Views/HomeAdmin/HomeAdmin2.cshtml
+++ b/WebApplication/Views/HomeAdmin/HomeAdmin2.cshtml
@@ -15,7 +15,7 @@
                 <h2 class="h-61 bold color-white">WONDER & EXCITEMENT</h2>
                 <p class="color-white">Lorem ipsum dolor sit amet consectetur. Id enim hendrerit enim <br> molestie. Duis quam eleifend aliquam diam vulputate.</p>
             </div>
-            <a href="./shop-listing-2.html" class="cus-btn primary">Shop Now</a>
+            <a href="/HomeAdmin/ShopListing" class="cus-btn primary">Shop Now</a>
         </div>
     </div>
 </div>
