--- a/WebApplication/Views/ManageUsers/ManageUsers.cshtml
+++ b/WebApplication/Views/ManageUsers/ManageUsers.cshtml
@@ -50,10 +50,10 @@
                             <tr>
 
                                 <td>@item.UserId</td>
-                                <td>@item.Name</td>
+                                <td>@item.Username</td>
                                 <td>@item.Email</td>
                                 <td>@item.UserIp</td>
-                                <td>@item.Level</td>
+                                <td>@item.Role</td>
 
                             </tr>
 
