only one UserDataModel

--- a/WebApplication/Views/ManageUsers/ManageUsers.cshtml
+++ b/WebApplication/Views/ManageUsers/ManageUsers.cshtml
@@ -31,7 +31,7 @@
                     <th>Id</th>
                     <th>Username</th>
                     <th>Email</th>
-                    <th>UserIp</th>
+                    @*<th>UserIp</th>*@
                     <th>UserRole</th>
                     @*<th>Wishlist</th>
                     <th>Cart</th>*@
@@ -52,7 +52,7 @@
                                 <td>@item.UserId</td>
                                 <td>@item.Username</td>
                                 <td>@item.Email</td>
-                                <td>@item.UserIp</td>
+                                @*<td>@item.UserIp</td>*@
                                 <td>@item.Role</td>
 
                             </tr>
