--- a/WebApplication/Views/Login/LogIn.cshtml
+++ b/WebApplication/Views/Login/LogIn.cshtml
@@ -2,7 +2,8 @@
     ViewBag.Title = "LogIn";
     Layout = null;
 }
-@model WebApplication.Models.UserLogin
+@model WebApplication.Models.UserDataModel
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
