--- a/WebApplication/Views/Login/SignIn.cshtml
+++ b/WebApplication/Views/Login/SignIn.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 
-@model WebApplication.Models.UserSignIn
+@model WebApplication.Models.UserDataModel
 
 <!DOCTYPE html>
 <html lang="en">
@@ -167,9 +167,9 @@
                                 </div>
 
                                 <div class="form-group mb-3">
-                                    @Html.LabelFor(m => m.FullName, new { @class = "control-label" })
-                                    @Html.TextBoxFor(m => m.FullName, new { @class = "form-control", placeholder = "Full name" })
-                                    @Html.ValidationMessageFor(m => m.FullName, "", new { @class = "text-danger" })
+                                    @Html.LabelFor(m => m.Username, new { @class = "control-label" })
+                                    @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Full name" })
+                                    @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
                                 </div>
 
                                 
