add user - user, admin

--- a/WebApplication/Views/Login/LogIn.cshtml
+++ b/WebApplication/Views/Login/LogIn.cshtml
@@ -265,7 +265,7 @@
     <div class="row mt-3">
         <div class="col-12 text-center">
             <p> <a href="pages-recoverpw.html" class="text-muted ml-1">Forgot your password?</a></p>
-            <p class="text-muted">Don't have an account? <a href="pages-register.html" class="text-primary font-weight-medium ml-1">@Html.ActionLink("Sign up", "SignIn", "Home", new { @class = "text-primary font-weight-medium ml-1" })</a></p>
+            <p class="text-muted">Don't have an account? <a href="pages-register.html" class="text-primary font-weight-medium ml-1">@Html.ActionLink("Sign up", "SignUp", "Login", new { @class = "text-primary font-weight-medium ml-1" })</a></p>
         </div> <!-- end col -->
     </div>
     <!-- end row -->
