--- a/WebApplication/Views/ManageUsers/AddUser.cshtml
+++ b/WebApplication/Views/ManageUsers/AddUser.cshtml
@@ -8,7 +8,7 @@
 
 <h2>Add User</h2>
 
-@using (Html.BeginForm("AddUserAction", "ManageUsers", FormMethod.Post))
+@using (Html.BeginForm("SignUpAdmin", "Login", FormMethod.Post))
 {
     <div class="form-group">
         <label for="username">Username</label>
