--- a/WebApplication/Views/Login/SignUp.cshtml
+++ b/WebApplication/Views/Login/SignUp.cshtml
@@ -150,7 +150,7 @@
                 <div class="col-md-8 col-lg-6 col-xl-5 mt-5">
                     <div class="card" style="max-width: 400px; border-radius: 20px; margin-top: 20px;">
                         <div class="card-body p-4" style="background-color: white; border-radius: 10px;">
-                            @using (Html.BeginForm("SignIn", "Login", FormMethod.Post))
+                            @using (Html.BeginForm("SignUpUser", "Login", FormMethod.Post))
                             {
                                 @Html.AntiForgeryToken()
 
