--- a/WebApplication/Views/Shared/ULayout.cshtml
+++ b/WebApplication/Views/Shared/ULayout.cshtml
@@ -200,11 +200,11 @@
                         </div>
                     </div>
                     <div class="newsletter">
-                        <h3 class="mb-24">Subscribe to our Newsletter</h3>
+                        @*<h3 class="mb-24">Subscribe to our Newsletter</h3>
                         <form action="./index-2.html" class="">
                             <input type="email" id="email" placeholder="Email" class="form-control mb-16" required>
                             <button type="submit" class="cus-btn primary w-100">Subscribe</button>
-                        </form>
+                        </form>*@
                         <ul class="unstyled social-icons">
                             <li><a href="./index-2.html"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="./index-2.html"><i class="fab fa-twitter"></i></a></li>
@@ -227,7 +227,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="menu">
+                    @*<div class="menu">
                         <h3 class="color-white mb-8">Important Links</h3>
                         <ul class="link unstyled">
                             <li class="">
@@ -249,7 +249,7 @@
                                 <a href="./product-detail-2.html">– Product Detail</a>
                             </li>
                         </ul>
-                    </div>
+                    </div>*@
                 </div>
             </div>
             <p class="color-white text-center">©2023 Cricket Pulse All Rights Reserved.</p>
